@@ -7,6 +7,9 @@ Changelog
 - Add Group details page.
   [Vitaliy Podoba]
 
+- Do not alert on ajax errors.
+  [Vitaliy Podoba]
+
 1.6.7 - January 30, 2013
 ------------------------
 
